--- a/login.html
+++ b/login.html
@@ -7,12 +7,44 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
     </head>
+    <style>
+        #login-form-div{
+            width: 400px;
+            height: 400px;
+            border: 2px red solid;
+            margin: auto;
+            text-align: center;
+            padding: 5%;
+        }
+        #pageName{
+            /* text-align: center; */
+            font-size: 300%;
+            height: 50%;
+            margin-bottom: 20%;
+        }
+        .inputBox{
+            text-overflow: clip;
+            width: 80%;
+            border: 2px red solid;
+            font-size: 120%;
+            padding: 2%;
+            margin-bottom: 2%;
+        }
+        #submitBtn{
+            font-size: 150%;
+            padding: 1% 5% 1% 5%;
+        }
+    </style>
 
     <body>
         <div id="login-form-div">
 
             <form>
                 <!--Write form input elements here-->
+                <div id="pageName">Login</div>
+                <input type="email" id="email" class="inputBox" placeholder="Enter your Email">
+                <input type="password" id="password" class="inputBox" placeholder="Enter your password">
+                <input type="submit" id="submitBtn" >
 
             </form>
 
