--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     function addSlides()
     {
-        Event.preventDefault();
+        event.preventDefault();
         console.log("test")
     }
     
