--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </html>
 <script>
     let getSlidesImagePath = document.getElementById('addMovies')
-    getSlidesImagePath.addEventListener("onsubmit",addSlides)
+    getSlidesImagePath.addEventListener("submit",addSlides)
     
     function addSlides()
     {
