--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
 
 <script>
 
-     let getAllDetails = document.querySelector('form')
+     let getAllDetails = document.getElementsByTagName('form')
         getAllDetails.addEventListener("submit",storeData)
 
     function storeData()
