--- a/signup.html
+++ b/signup.html
@@ -59,15 +59,46 @@
 </html>
 
 <script>
+// <------gettting form data----------->
+
 
      let getAllDetails = document.querySelector('form')
 
-     console.log(getAllDetails.name.value)
-    function storeData()
+    getAllDetails.addEventListener("submit",storeData)
+
+// <-----creating function for userData----->
+
+    function userInfo(name,number,email,password)
     {
-        Event.preventDefault;
-        console.log(getAllDetails)
+        this.name = name;
+        this.number = number;
+        this.email = email;
+        this.password = password;
     }
 
+    let dataBucket = JSON.parse(localStorage.getItem("userSignupDetails")) || [];
+
+    function storeData()
+    {
+        
+        let name = getAllDetails.name.value
+        let number = getAllDetails.number.value
+        let email = getAllDetails.email.value
+        let password = getAllDetails.password.value
+
+        if(name === '' || number === '' || email === '' || password === '')
+        {
+            alert("Please fill all blanks")
+            event.preventDefault()
+        }
+        else
+        {
+            event.preventDefault()
+            let userDetails = new userInfo(name,number,email,password)
+            dataBucket.push(userDetails)
+            localStorage.setItem("userSignupDetails",JSON.stringify(dataBucket))
+        }
+        
+    }
 
 </script>
