--- a/navbar.html
+++ b/navbar.html
@@ -21,15 +21,20 @@
             text-align: center;
             padding: 1% 1% 1% 1%;
             font-size: 150%;
+            cursor:pointer;
+        }
+        a{
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
     <div id="navbar">
         <div id="leftSpace"></div>
-        <div id="login">Login</div>
-        <div id="signup">Signup</div>
-        <div id="home">Home</div>
+        <div id="login"><a href="login.html">Login</a></div>
+        <div id="signup"><a href="signup.html">Signup</a></div>
+        <div id="home"><a href="index.html">Home</a></div>
     </div>
+    <div id="pages"></div>
 </body>
 </html>
