--- a/login.html
+++ b/login.html
@@ -6,11 +6,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
+
+        <!-- <<<<<<<<<<<<<links>>>>>>>>>>>>>>>>> -->
+            
         <link rel="stylesheet" href="./styles/login.css">
+        <link rel="stylesheet" href="./styles/nav.css">
         
     </head>
 
     <body>
+        <!-- <<<<<<<<<<<<<<<<<<loadHeader>>>>>>>>>>> -->
+
+        <div id="navbar">
+            <div id="leftSpace"></div>
+            <div id="login"><a href="login.html">Login</a></div>
+            <div id="signup"><a href="signup.html">Signup</a></div>
+            <div id="home"><a href="index.html">Home</a></div>
+        </div>
+
+
+        <!-- <<<<<<<<<<<<<<<<loadData>>>>>>>>>> -->
+
+
         <div id="login-form-div">
 
             <form>
